<?xml version="1.0"?>
<package format="2">
  <name>husky_desktop_custom</name>
  <version>0.0.0</version>
  <description>The husky_desktop_custom package</description>
  <maintainer email="gregory.baker@brl.ac.uk">Greg Baker</maintainer>
  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/husky_desktop_custom</url> -->


  <author email="gregory.baker@brl.ac.uk">Greg Baker</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>husky_cartographer_navigation</depend>
  <depend>husky_viz</depend>
  <depend>ros_tcp_endpoint</depend>
  <depend>rospy</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
